--- a/task3/task3.html
+++ b/task3/task3.html
@@ -9,18 +9,22 @@
 </head>
 <body>
     <div class="return_arrow">
-        <img src="arrow.png" />
+        <img src="image/arrow.png" />
     </div>
     <div class="grape">
-        <img src="grape.png" />
+        <img src="image/grape.png" />
     </div>
     <p>葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以线下聚会桌游道具为主。</p>
     <div class="left">
-        <img src="left.png"/>
+        <div class="iconimage">
+            <img src="image/left.png"/>
+        </div>
         <p>290560933</p>
     </div>
     <div class="right">
-        <img src="right.png"/>
+        <div class="iconimage">
+            <img src="image/right.png"/>
+        </div>
         <p>BJPTTeng</p>
     </div>
 </body>
