--- a/task3/task3.html
+++ b/task3/task3.html
@@ -9,21 +9,21 @@
 </head>
 <body>
     <div class="return_arrow">
-        <img src="image/arrow.png" />
+        <img src="image/arrow.png" alt="return"/>
     </div>
     <div class="grape">
-        <img src="image/grape.png" />
+        <img src="image/grape.png" alt="logo"/>
     </div>
     <p>葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以线下聚会桌游道具为主。</p>
     <div class="left">
         <div class="iconimage">
-            <img src="image/left.png"/>
+            <img src="image/left.png" alt="lefticon"/>
         </div>
         <p>290560933</p>
     </div>
     <div class="right">
         <div class="iconimage">
-            <img src="image/right.png"/>
+            <img src="image/right.png" alt="righticon"/>
         </div>
         <p>BJPTTeng</p>
     </div>
