--- a/task3/task3.html
+++ b/task3/task3.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>魔镜介绍页</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,
-    minimum-scale=1.0,user-scale=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./task3.css">
 </head>
 <body>
@@ -14,18 +13,22 @@
     <div class="grape">
         <img src="image/grape.png" alt="logo"/>
     </div>
-    <p>葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以线下聚会桌游道具为主。</p>
-    <div class="left">
-        <div class="iconimage">
-            <img src="image/left.png" alt="lefticon"/>
+    <div class="mainbody">
+        <p>葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以线下聚会桌游道具为主。</p>
+        <div class="left">
+            <div class="iconimage">
+                <img src="image/left.png" alt="lefticon"/>
+            </div>
+            <p>290560933</p>
         </div>
-        <p>290560933</p>
-    </div>
-    <div class="right">
-        <div class="iconimage">
-            <img src="image/right.png" alt="righticon"/>
+        <div class="right">
+            <div class="iconimage">
+                <img src="image/right.png" alt="righticon"/>
+            </div>
+            <p>BJPTTeng</p>
         </div>
-        <p>BJPTTeng</p>
     </div>
+
+
 </body>
 </html>
