--- a/task4/task4.html
+++ b/task4/task4.html
@@ -13,10 +13,17 @@
         <div class="register">注册</div>
     </header>
     <main>
-        <div class="phone"></div>
-        <div class="password"></div>
+        <div class="phone">
+            <img class="icon" src="image/phone.png">
+            <input type="text" placeholder="请输入手机号">
+        </div>
+        <div class="password">
+            <img class="icon" src="image/password.png">
+            <input type="password" placeholder="请输入密码">
+        </div>
         <div class="loginbutton"></div>
-        <p>忘记密码?</p>
+        <input class="inputbutton" type="button" value="登      陆"/>
+        <p class="forget">忘记密码?</p>
     </main>
     <div></div>
 
