--- a/task4/task4.html
+++ b/task4/task4.html
@@ -14,11 +14,11 @@
     </header>
     <main>
         <div class="phone">
-            <img class="icon" src="image/phone.png">
+            <img class="icon" src="image/phone0.png">
             <input type="text" placeholder="请输入手机号">
         </div>
         <div class="password">
-            <img class="icon" src="image/password.png">
+            <img class="icon" src="image/password0.png">
             <input type="password" placeholder="请输入密码">
         </div>
         <div class="loginbutton"></div>
